Fix div used to give opacity to background image in Presentation
This div now wraps the whole content in order to make it grow in height
when the screen width is too small. Likewise, the content is given a
higher index so it can stand out from its container.

--- a/client/src/styles/presentation.css
+++ b/client/src/styles/presentation.css
@@ -11,13 +11,16 @@
     align-items: center;
     min-height: 100vh;
     font-family: 'Passion One', cursive;
-    padding: 0px 60px;
     color: white;
 }
 
 .bg-opacity{
-    position: absolute;
-    width: 100%; height: 100%;
+    width: 100%; min-height: 100vh;
+    padding: 0px 60px;
+    display: flex;
+    flex-flow: column;
+    justify-content: center;
+    align-items: center;
     background-color: rgba(0, 0, 0, 0.55);
     z-index: 1;
 }
